# algorithms

./: .gitignore  CMakeLists.txt  README.md
ADT/: CMakeLists.txt
ADT/List/: CMakeLists.txt  README.md
ADT/List/DoubleLinkedList/: CMakeLists.txt
ADT/List/SequentialList/: CMakeLists.txt  SequentialList.c
ADT/List/SinglyLinkedList/: SinglyLinkedList.h
ADT/Queue/: CMakeLists.txt  README.md
ADT/Queue/LinkedQueue/: CMakeLists.txt
ADT/Queue/SequentialQueue/: CMakeLists.txt  SequentialQueue.c  (+1 more)
ADT/Stack/: CMakeLists.txt
chapter01/: README.md
chapter02/: CMakeLists.txt  README.md  int_double_list.c  int_double_list.h  int_double_list_demo.c  int_seq_list.c  int_seq_list.h  int_seq_list_demo.c  int_single_list.c  int_single_list.h  int_single_list_demo.c
chapter02/DoubleLinkedList/: DoubleLinkedList.c  DoubleLinkedList.h  DoubleLinkedListExample.c
chapter02/SequentialList/: SequentialList.h  SequentialListExample.c
chapter02/SinglyLinkedList/: CMakeLists.txt  SinglyLinkedList.c  SinglyLinkedListExample.c
chapter03/: CMakeLists.txt  README.md  bracket_match.c  decimal_to_octal.c  int_link_queue.c  int_link_queue.h  int_link_stack.c  int_link_stack.h  int_seq_stack.c  int_seq_stack.h  stand_in_line.c
chapter03/LinkedStack/: LinkedStack.c
chapter03/SequentialStack/: SequentialStack.c
chapter04/: README.md  seq_string.c  seq_string.h
chapter04/LinkedQueue/: LinkedQueue.c  LinkedQueue.h  LinkedQueueExample.c
chapter04/SequentialQueue/: SequentialQueue.h
chapter05/: CMakeLists.txt  README.md  int_seq_array.c  int_seq_array.h  int_seq_array_demo.c
(+6 files in other folders)
